--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 
 @custom-variant dark (&:is(.dark *));
 
+button {
+   cursor: pointer;
+}
+
 @theme inline {
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
